--- a/style.css
+++ b/style.css
@@ -199,15 +199,15 @@ html,body
     position: relative;
     left: 55%;
     top: 5%;
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
     background-color: #fff;
 }
 
 #toprt #circle2 i
 {
-    font-size: 20px;
+    font-size: 15px;
     font-weight: 800;
 }
 
@@ -280,12 +280,12 @@ html,body
     justify-content: center;
     align-items: center;
     position: absolute;
-    left: 17%;
+    left: -26%;
     top: 20%;
-    width: 30px;
-    height: 30px;
+    width: 80px;
+    height: 80px;
     border-radius: 50%;
-    border: 2px solid goldenrod;
+    border: 5px solid rgb(255, 183, 3);
     background-color: #fff;
 }
 
